Disabled class that adds margin to compensate for the scrollbar being removed when drawer is opened. I found this to counter-productive for now, as I realized this actually just creates the issue on mobile when it otherwise is fine there

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -203,9 +203,9 @@ body[data-scroll-active='false'] {
   overflow-y: hidden;
 }
 
-body[data-scroll-active='false'][data-page-height-scroll='true'] > main {
+/* body[data-scroll-active='false'][data-page-height-scroll='true'] > main {
   margin-right: 1rem;
-}
+} */
 
 a,
 p,
